# fluids

./: .coverage  .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .ruff.toml  .travis.yml  AUTHORS  CONTRIBUTING.md  Justfile  LICENSE.txt  MANIFEST  MANIFEST.in  Makefile  README.rst  SECURITY.md  __init__.py  appveyor.yml  asv.conf.json  changelog.md  conf.py  conftest.py  environment.yml  fluids.control_valve.rst  fluids.open_flow.rst  fluids.packed_bed.rst  fluids.piping.rst  fluids.rst  fluids.test.rst  friction_factor.py  index.rst  mixing.py  mypy.ini  nuitka-crash-report.xml  packed_bed.py  pyproject.toml  pytest.ini  requirements.txt  requirements_docs.txt  requirements_security.txt  (+5 more)
.github/: workflows
.github/workflows/: build-multiarch.yaml  build-multiarch.yml  build.yml  build_cxfreeze_library.yml  build_multi_numpy_scipy.yml  build_multi_scipy.yml  build_nuitka_library.yml  build_py2exe_library.yml  build_pyinstaller_library.yml  build_third_party_packagers.yml  codeql-analysis.yml  micropython.yml  publish-testpypi.yml  python-package.yml  quality.yml  security.yml  test-distributions.yml  test.yaml
Examples/Crane TP 410 Solved Problems/: 7-13 Flow given in English Units - Oil.ipynb  7.1 Smooth Pipe (Plastic).ipynb  7.10 Piping Systems - Steam.ipynb  7.11 Flat heating Coils - Water.ipynb  7.13 Flow given in English Units - Oil.ipynb  7.14 Bernoulli's Theorem-Water.ipynb  7.5 Lift Check Valves.ipynb  7.7 Laminar flow in Valves, Fittings, and Pipe - System from Example 7.6.ipynb
_custom_build/: __init__.py  backend.py
bench/: benchmark atmosphere.ipynb  benchmark compressible.ipynb  example.ipynb
bench/.ipynb_checkpoints/: benchmark filters interpolation-checkpoint.ipynb  fluids benchmark-checkpoint.ipynb
benchmarks/: benchmarks.py
dev/: basic_standalone_fluids_check.py  check_fluids_can_be_called_from_R.R  check_fluids_can_be_called_from_julia.jl  check_fluids_can_be_called_from_perl.pl  check_fluids_can_be_called_from_ruby.rb  cx_freeze_basic_standalone_check_builder.py  micropython_pytest_shim.py  prerelease.py  py2exe_basic_standalone_check_builder.py
dev/D/: dub.selections.json
dev/cx_freeze/: cx_freeze_basic_standalone_check_builder.py
dev/fortran/: fluids_test.f90
dev/go/: go.mod
dev/haskell-fluids-test/: CHANGELOG.md  Main.hs  haskell-fluids-test.cabal
dev/nim/: check_fluids_can_be_called_from_nim.nim
docs/: conf.py  data.rst  developers.rst  examples.rst  fluids.atmosphere.rst  fluids.compressible.rst  fluids.control_valve.rst  fluids.core.rst  fluids.drag.rst  fluids.filters.rst  fluids.fittings.rst  fluids.flow_meter.rst  fluids.friction.rst  fluids.friction_factor.rst  fluids.geometry.rst  fluids.jet_pump.rst  fluids.mixing.rst  fluids.numba.rst  fluids.open_flow.rst  fluids.packed_bed.rst  fluids.packed_tower.rst  fluids.particle_size_distribution.rst  fluids.piping.rst  fluids.pump.rst  fluids.rst  fluids.safety_valve.rst  fluids.saltation.rst  fluids.separator.rst  fluids.two_phase.rst  fluids.two_phase_voidage.rst  fluids.units.rst  fluids.vectorized.rst  index.rst  modules.rst  robots.txt  sample_programs.rst  test_documentation.py  tutorial.rst
docs/Data/: Friction.ipynb  Pipe Schedules.ipynb  Sieve Sizes for Particle Size Distributions.ipynb
docs/Samples/: Tank.ipynb
docs/_static/: custom.css
docs/_templates/: localtoc.html
docs/language_examples/: c.rst  check_fluids_can_be_called_from_julia.jl  check_fluids_can_be_called_from_lisp.lisp  check_fluids_can_be_called_from_octave.m  check_fluids_can_be_called_from_r.R  cpp.rst  d.rst  fortran.rst  go.rst  haskell.rst  index.rst  julia.rst  lisp.rst  nim.rst  octave.rst  perl.rst  r.rst  ruby.rst
docs/language_examples/cpp/: CMakeLists.txt  main.cpp
docs/language_examples/haskell/: CHANGELOG.md  haskell-fluids-test.cabal
docs/language_examples/haskell/app/: Main.hs
docs/plots/: bend_miter_plot.py  bend_rounded_Crane_plot.py  contraction_conical_plot.py  contraction_round_plot.py  diffuser_conical_plot.py  entrance_beveled.py  entrance_beveled_plot.py  entrance_distance.py  entrance_distance_plot.py  entrance_rounded.py  entrance_rounded_plot.py  ft_Crane.py  ft_Crane_plot.py
fluids/: .coverage  __init__.py  atmosphere.py  atmosphere.pyi  compressible.py  compressible.pyi  control_valve.py  control_valve.pyi  core.py  core.pyi  design_climate.py  drag.py  drag.pyi  filters.py  filters.pyi  fittings.py  fittings.pyi  flow_meter.py  flow_meter.pyi  friction.py  friction.pyi  friction_factor.py  geometry.py  geometry.pyi  jet_pump.py  jet_pump.pyi  mixing.py  mixing.pyi  numba.py  numba_vectorized.py  open_flow.py  open_flow.pyi  orifice_plate.py  packed_bed.py  packed_bed.pyi  packed_tower.py  packed_tower.pyi  particle_size_distribution.py  particle_size_distribution.pyi  particle_size_distribution_data.py  (+19 more)
fluids/constants/: __init__.py  constants.py
fluids/data/: 3 phase power.csv  ASTM E11 sieves.csv  ISO 3310-1 sieves.csv  Miller 2E 1990 Kb mitre bend.csv  Miller 2E 1990 abrupt contraction K.csv  Miller 2E 1990 conical contraction Kd.csv  Miller 2E 1990 conical contractions K part 1.csv  Miller 2E 1990 conical contractions K part 2.csv  (+6 more)
scripts/: build.py  build_hwm.py  minify.py
tests/: __init__.py  doctests.py  make_test_stubs.py  manual_runner.py  test_atmosphere.py  test_compressible.py  test_control_valve.py  test_core.py  test_design_climate.py  test_doctests.py  test_drag.py  test_filters.py  test_fittings.py  test_fittings_fits.py  test_flow_meter.py  test_friction.py  test_general.py  test_geometry.py  test_jet_pump.py  test_mixing.py  test_nrlmsise00_file_output.py  test_nrlmsise00_full.py  test_numba.py  test_numerics.py  test_numerics_arrays.py  test_numerics_doubledouble.py  test_numerics_polynomial_evaluation.py  test_numerics_polynomial_roots.py  test_numerics_polynomial_utils.py  test_numerics_special.py  test_open_flow.py  test_orifice_plate.py  test_packed_bed.py  test_packed_tower.py  test_particle_size_distribution.py  test_piping.py  test_pump.py  test_safety_valve.py  test_saltation.py  test_separator.py  (+5 more)
(+185 files in other folders)
